--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,8 @@ html(lang="en")
     title #{nombrePagina} 
   body 
       header.barra
-        h1 UpTask - Administrador de Proyectos
+        //- h1 UpTask - Administrador de Proyectos
+        a(class="home" href="/") UpTask - Administrador de Proyectos
         a(href="#") Cerrar Sesion 
 
       main.contenedor 
@@ -25,4 +26,4 @@ html(lang="en")
                     a(href=`/proyectos/${proyecto.url}`) #{proyecto.nombre}
         block contenido
 
-        pre= vardump(proyectosdb)
+        //- pre= vardump(proyectosdb)
