--- a/views/tareas.pug
+++ b/views/tareas.pug
@@ -2,4 +2,13 @@ extends layout
 
 block contenido 
   .contenido-principal 
-    h1 #{nombrePagina}
+    h1 #{nombrePagina} - #{proyecto.nombre}
+
+    //TODO FORMULARIO AQUI
+
+    //TODO LISTADO PENDIENTES
+
+    //ACCIONES A REALIZAR
+    .contenedor-acciones
+      a(href=`/proyectos/editar/${proyecto.id}` class="boton") Editar proyecto 
+      button#eliminar-proyecto(type="button" class="boton eliminar") Eliminar proyecto
